# App-Screen

./: .devcontainer.json  .env.example  .gitignore  .npmrc  .wslconfig  App.tsx  BRAINTREE_FRONTEND_INTEGRATION.md  BRAINTREE_INTEGRATION.md  CHROME_EXTENSION_SETUP.md  DEVCONTAINER_FIX_SUMMARY.md  DEVELOPMENT_SETUP.md  DEV_VALIDATION_RECORD.md  Dockerfile  Makefile  PRICING_VALIDATION.md  README.md  WSL_TROUBLESHOOTING.md  braintree-frontend-demo.html  braintree-test.html  database_schema.sql  docker-compose.yml  fix_setup.sh  index.html  laughing succotash dev env and dev con.code-profile  manual_start.sh  metadata.json  package-lock.json  package.json  preview-server.js  pyproject.toml  requirements.txt  setup.py  setup_dev_environment.sh  start_dev.sh  start_dev_services.sh  start_services.sh  stop_dev.sh  stop_services.sh  tailwind.config.js  test_api.py  (+6 more)
.devcontainer/: Dockerfile  PERFORMANCE_FIXES.md  README.md  README_CHANGES.md  _docker_build_features.sh  backup-configs.sh  clean_devcontainer_cache.sh  devcontainer.json  docker-compose.codespaces.yml  docker-compose.dev.yml  docker-compose.yml  docker_compose_devcontainer.json  env.example  health-check.sh  install-node.sh  post-create.sh  post-start.sh  postCreate.sh  postCreateCommand.sh  rollback.sh  setup.sh  setup_dev.sh  validate.sh  wait-for.sh
App-Screen/: package.json
backend/: .env.example  BILLING.md  Dockerfile  MONITORING_SETUP.md  README.md  S3_CLOUDFRONT_SETUP.md  SECURITY.md  WAF_RULES.md  install_deps.sh  requirements-alpine.txt  requirements-worker.txt  requirements.txt  run_migrations.sh  (+12 more)
(+162 files in other folders)
